src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --primary-color: #e00000;
  --secondary-color: #000000;
  --heading-color: #1f4943;
  --highlight-color: #058e6e;
  --border-color: #c4c4c4;
  --link-color: #000000;
  --notification-background: #ecea9d;
  --text-font: 14px;
}

h1 {
  font-size: 30px;
}
body {
  padding-bottom: 100px;
  margin: 0;
  font-size: 14;
  font-family: "Poppins", sans-serif !important;
  margin-top: -16px;
  background-color: #f2f6f6 !important;
  padding-bottom: 0;
  width: 100% !important;
}
.container {
  max-width: 1220px;
  padding: 10px 15px 0px 10px;
  margin: auto;
}
.notification-background {
  background-color: var(--notification-background);
}
.notification-background p {
  text-align: center;
  padding: 10px 0;
  margin: 0 !important;
}
.notification-background p span {
  color: var(--primary-color);
  font-weight: 700;
}
.header .container {
  border-bottom: 1px solid var(--border-color);
}
.header .containers,
.header .containers .contacts {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 15px;
  margin: 0px 20px;
}
.header .container .contacts {
  padding-bottom: 0;
}
.header .containers {
  border-bottom: 1px solid #e8c2c1;
}
.header .contacts a {
  text-decoration: none;
  color: black;
  font-weight: 700;
  font-size: 25px;
  padding: 0 10px;
}
.sec1 {
  margin: 50px 0;
}
.sec1 h1 {
  text-align: center;
  font-weight: 400;
  font-size: 50px;
}
.sec1 h1 div {
  font-weight: 700;
  padding-top: 10px;
}
.sec1 h1 div img {
  padding-right: 15px;
  width: 53px;
  margin-top: -13px;
}
.sec2 {
  background-color: #1f4943;
  padding: 40px 0;
}
.sec2 .features {
  display: flex;
  justify-content: space-between;
  max-width: 1024px;
  margin: auto;
}
.sec3 .aiimage img {
  float: right;
  width: 65%;
}
.sec3 h1 span.highlight {
  color: var(--highlight-color);
  font-weight: bold;
}
.whotakecourse {
  display: flex;
  justify-content: space-between;
}
.whotakecourse .batch {
  padding: 10px;
  max-width: 400px;
  border-radius: 16px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 20px 0;
}
.whotakecourse .batch .image {
  padding: 10px;
  background-color: #f1efea;
  border-radius: 15px;
  margin-right: 15px;
  width: 50px;
}
.whotakecourse .batch .content {
  font-size: 18px;
  font-weight: 700;
}
.whotakecourse .batch .content div:not(.day) {
  font-size: 14px;
  font-weight: 600;
  font-size: 24px;
  margin-bottom: 0;
  text-wrap: wrap;
}
.whotakecourse .batch .content .day {
  color: #979797;
  font-size: 16px;
}
.sec3 {
  padding: 100px 0;
}
.sec3 .row {
  align-items: center;
}
.sec3 h1 {
  font-weight: 500;

  font-size: 56px;
}
.sec3 .link {
  color: var(--link-color);
  margin-bottom: 40px;
  font-size: 24px;
  font-weight: bold;
}
.sec3 span.button button,
.sec6 span.button button,
.sec9 .sec9-2ndrow div.button button {
  background-color: #ec5f5f;
  color: #ffffff;
  padding: 20px 115px;
  border: 1px solid #ec5f5f;
  border-radius: 68px;
  font-size: 26px;
  margin-right: 15px;
}
.sec3 span.button {
  padding-top: 25px;
}
.sec3 .button img {
  width: 110px;
}
.sec4 {
  background: linear-gradient(111deg, #e9f7ff 0%, #ffdbd4 100%);
  border-radius: 10px;
  padding: 50px 80px;
}
.sec4 .sec4background {
  display: flex;
  justify-content: center;
}
.sec4 .sec4background img {
  padding: 30px;
  background-color: #ffffffea;
  border-radius: 4;
}
.sec5 .linearbackground {
  background: linear-gradient(111deg, #e9f7ff 0%, #ffdbd4 51%, #fff3ca 100%);
  border-radius: 20px;
  padding: 34px;
}
.sec5 .sec5button {
  background-color: #058e6e;
  color: white;
  padding: 15px 11px;
  font-weight: bold;
  border: 1px solid #058e6e;
  font-size: 23px;
}
.sec5 p {
  font-size: 25px;
}
.sec5 h2 {
  padding-bottom: 24px;

  font-size: 33px;
  color: #1f4943;
  font-weight: 700;
}
.sec5 .batch {
  border: 1px solid black;
  padding: 20px 10px;
  max-width: 400px;
  border-radius: 16px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 20px 0;
  background-color: white;
}
.sec5 .batch .date {
  font-size: 18px;
  font-weight: 700;
}
.sec5 .batch .timings p:not(.day) {
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 0;
}
.sec5 .batch .timings .day {
  color: #979797;
}
.locationmobile {
  background: rgba(255, 255, 255, 0.43);
  border-radius: 10px;
  border: 1px solid #dddddd;
  display: block;
  padding: 15px;
  margin: 30px 0;
}
.sec6 {
  margin: 50px 0;
}
.sec6 .row {
  padding: 50px;
  background-color: white;
  box-shadow: 0px 4px 7px 9px rgba(219, 219, 219, 0.4);
}
.sec6 span span.price {
  font-weight: 800;
}
.sec6 span.price {
  font-size: 30px;
}
.sec6 .whocandothiscourse {
  font-size: 36px;
  font-weight: 700;
  margin-top: 50px;
}
.sec6 span span.fullprice {
  font-weight: 700;
  color: #83838399;
  padding-left: 10px;
}
.sec6 p.seats span:nth-child(1) {
  color: #ec605e;
  font-size: 24px;
  font-weight: 700;
}
.sec6 p.seats span:nth-child(2) {
  color: #8d8d8d;
  font-size: 16px;
  font-weight: 400;
}
.sec6 .link {
  color: var(--link-color);
  font-size: 24px;
  font-weight: bold;
}
.sec6 img.users {
  width: 110px;
}
.sec6 .batch .content p {
  margin-bottom: 0;
  font-size: 24px;
}
.sec6 h2 {
  text-align: center;
  border-bottom: 1px solid #dddddd;
  margin-bottom: 50px;
  padding-bottom: 20px;
  font-weight: 700;
}
.sec6 div.features {
  margin-top: 50px;
}
.sec7 .sec7text {
  font-size: 30px;
  font-weight: 400;

  font-size: 56px;
  line-height: 66px;
  padding-right: 75px;
}
.mentor_image {
  width: 50%;
  border-radius: 25px;
}
.sec7 .row {
  align-items: center;
}
.sec7 .sec7text p:nth-child(1) {
  color: #7473f4;
}
.sec7 .sec7text p:nth-child(2) {
  color: #ec605f;
}
/* ... */

